--- a/snakey/snakey.cabal
+++ b/snakey/snakey.cabal
@@ -29,7 +29,7 @@ author:              Carol Leung
 
 -- An email address to which users can send suggestions, bug reports, and
 -- patches.
-maintainer:          carol.leung@alumni.ubc.ca
+maintainer:          carolleung8205@gmail.com
 
 -- A copyright notice.
 -- copyright:
