pokeDex loaded, see start of file for colnames

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ SNakey12/cabal.sandbox.config
 Mr_Prolog/settings.json
 Mr_Prolog/.vscode/settings.json
 Mr_Prolog/.vscode/settings.json
+pokemon/example.csv
